1998-01-27  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* main.m (main): Constify argv.

	* MousetrapObserverSwarm.m ([MousetrapObserverSwarm
	-buildObjects]): Use Colormap not XColormap for colormap.  Revert
	GUI_ButtonRight change.

1998-01-24  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* MousetrapObserverSwarm.m:  Include gui.h.
	([MousetrapObserverSwarm -buildObjects]): Send waitForControlEvent
	to actionCache. Use GUI_ButtonRight instead of ButtonRight.

	* MousetrapObserverSwarm.h (MousetrapObserverSwarm): Make
	colormap conform to Colormap protocol instead of being statically
	typed to XColormap.  Make displayWindow conform to the ZoomRaster
	protocol instead of being statically typed.

	* MousetrapObserverSwarm.h: Include gui.h instead of tkobjc.h.

	* Mousetrap.m: Don't include tkobjc.h.
	Reformatting throughout.

1998-01-15  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* MousetrapObserverSwarm.m ([MousetrapObserverSwarm
	-buildObjects]): Use SET_WINDOW_GEOMETRY_RECORD_NAME for
	triggerGraph and displayWindow.

	* main.m (main): Likewise, but for theTopLevelSwarm.

1998-01-14  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* MousetrapObserverSwarm.m ([MousetrapObserverSwarm -_update_]):
	Checks to see that there is still a displayWindow before
	attempting the draw it.
	([MousetrapObserverSwarm -_updateMousetraps_:]): New method that
	draws all the mousetraps unless there isn't a display window (the
	argument), and sets a trap's display widget.
	([MousetrapObserverSwarm -_displayWindowDeath_:]): New method
	called on destruction of display windows.  Has the effect of
	clearing all the display widgets.
	([MousetrapObserverSwarm -buildObjects]): Call
	enableDestroyNotification using our _displayWindowDeath_ as a
	handler.  Call _updateMousetraps_ (code that was inline).
	([MousetrapObserverSwarm -buildActions]): Use action that
	calls our _update_ instead of displayWindow's drawSelf.

1998-01-13  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
